--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@ Pagina 3
 <section class="sobre">
 <img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg&quot; alt="" class="sobre_imagem">
 <div class="sobre_texto">
-<h2 class="sobre_texto-titulo">Aqui será nosso titulo</h2>
+<h2 class="sobre_texto-titulo">FESTEJANDO CAMPO E CIDADE</h2>
 <p class="sobre_texto-conteudo">
-Aqui será um texto bem longo, explicando para que server seu site.
+Esse site é um espaço para contar historias de quem trocou o campo pela cidade, ou fez o caminho inverso. Resgistramos experiencias de mudanças, aprendizados e desafios de viver entre dosi mundos.
 </p>
 
 </div>
 </section>
 <section class="elementos">
 <div class="elementos__div">
-<img src="https://cdn.vnda.com.br/x450/ceramicasa/2021/02/19/10_2_8_869_QUADRADO20X2021CinzaClaro.jpg&quot; alt="" class="elementos__imagem">
+<img src="img/casa-de-campo.jpg" class="elementos__imagem">
 <h1 class="elementos__titulo">
 titulo da minha imagem
 </h1>
