--- a/index.html
+++ b/index.html
@@ -30,14 +30,13 @@ Pagina 3
 <div class="sobre_texto">
 <h2 class="sobre_texto-titulo">FESTEJANDO CAMPO E CIDADE</h2>
 <p class="sobre_texto-conteudo">
-Esse site é um espaço para contar historias de quem trocou o campo pela cidade, ou fez o caminho inverso. Resgistramos experiencias de mudanças, aprendizados e desafios de viver entre dosi mundos.
-</p>
+Falaremos sobre a migração de campo para área urbana</p>
 
 </div>
 </section>
 <section class="elementos">
 <div class="elementos__div">
-<img src="img/casa-de-campo.jpg" class="elementos__imagem">
+<img src="img/https:/www.google.com/url?sa=i&url=https%3A%2F%2Fmundoeducacao.uol.com.br%2Fgeografia%2Fmigracoes-no-brasil.htm&psig=AOvVaw3L0nasZwf0kYD_HdyzRlLd&ust=1749729014421000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCKiNutSm6Y0DFQAAAAAdAAAAABAL" class="elementos__imagem">
 <h1 class="elementos__titulo">
 titulo da minha imagem
 </h1>
